[package]
name = "ptpimg-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
mime_guess = "2.0.4"
reqwest = {version="0.12.4", features=["multipart", "stream", "json"]}
serde = {version="1.0.198", features=["derive"]}
tokio = {version="1.37.0", features=["full"]}
tokio-util = "0.7.10"
